--- a/trader_diary_main.html
+++ b/trader_diary_main.html
@@ -372,5 +372,7 @@
     </div>
 
     <script src="trader_diary_script.js"></script>
+    <script src="user_management.js"></script>
+    <script src="supabase_integration.js"></script>
 </body>
 </html>
